GEODE-10140: Opens/exports for QueryResultFormatter tests