@@ -186,6 +186,10 @@ gradle.taskGraph.whenReady({ graph ->
                 "--add-opens=java.base/java.nio.channels=ALL-UNNAMED",
                 "--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED",
                 "--add-opens=java.base/java.text=ALL-UNNAMED",
+                "--add-opens=java.base/java.time=ALL-UNNAMED",
+                "--add-opens=java.base/java.time.chrono=ALL-UNNAMED",
+                "--add-opens=java.base/java.time.format=ALL-UNNAMED",
+                "--add-opens=java.base/java.time.temporal=ALL-UNNAMED",
                 "--add-opens=java.base/java.util=ALL-UNNAMED",
                 "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
                 "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
@@ -198,6 +202,11 @@ gradle.taskGraph.whenReady({ graph ->
                 "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED",
                 "--add-opens=java.base/jdk.internal.util.jar=ALL-UNNAMED",
                 "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.factory=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.repository=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.scope=ALL-UNNAMED",
+                "--add-opens=java.base/sun.reflect.generics.tree=ALL-UNNAMED",
                 "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
                 "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
                 "--add-opens=java.base/sun.util.locale=ALL-UNNAMED",
@@ -206,8 +215,6 @@ gradle.taskGraph.whenReady({ graph ->
                 "--add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED",
                 "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
 
-                "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-                "--add-exports=java.base/sun.reflect.generics.repository=ALL-UNNAMED",
                 "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
                 "--add-exports=java.management/com.sun.jmx.remote.security=ALL-UNNAMED",
         ]
